Change cursor in website donate button and fix overlap
PR:             261038
Submitted by:   Graham Perrin <grahamperrin (AT) gmail.com>

--- a/website/themes/beastie/static/css/layout.css
+++ b/website/themes/beastie/static/css/layout.css
@@ -442,8 +442,8 @@ header {
   padding: 2% 15%;
   margin-bottom: 3%;
   text-align: center;
-  font-size: 1.1em;
   font-weight: bold;
+  cursor: pointer;
 }
 
 .donate a, .donate a:link, .donate a:visited, .donate a:hover, .donate a:active {
